testTask: almost done
