# lab/testTask/src/main/java/shift/sellersandtransactions/api/controller/TransactionController.java
@@ -1,4 +1,4 @@
-package shift.sellersandtransactions.api.contoller;
+package shift.sellersandtransactions.api.controller;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -18,10 +18,12 @@ public class TransactionController {
     private final TransactionService transactionService;
 
     @GetMapping
-    public List<TransactionResponseDto> getAllTransactions() {
+    public List<TransactionResponseDto> getTransactions(@RequestParam(required = false) Long sellerId) {
+        if (sellerId != null) {
+            return transactionService.getTransactionsBySellerId(sellerId);
+        }
         return transactionService.findAll();
     }
-
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public TransactionResponseDto createTransaction(@Valid @RequestBody TransactionRequestDto request) {
@@ -30,6 +32,6 @@ public class TransactionController {
 
     @GetMapping("/{id}")
     public TransactionResponseDto getTransactionById(@PathVariable Long id) {
-        return transactionService.findById(id);
+        return transactionService.findByTransactionId(id);
     }
 }
